samples/_failures_safe/1761279066_85c41d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b9c3665e.c: In function ‘main’:
./samples/SAFE/__tmp_b9c3665e.c:147: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_b9c3665e.c:146:5: error: expected declaration or statement at end of input
  146 |     if
      |     ^~
